# pdf-api

./: .env  Dockerfile  pyproject.toml
.vercel/: project.json
Database/: db.py  setting.py
api_routes/: main.py  pdf_data.py
cv_controllers/: cv_controller.py
